--- a/styles/notion.css
+++ b/styles/notion.css
@@ -5,7 +5,7 @@
 }
 
 .notion {
-  @apply text-gray-600 dark:text-gray-300;
+  /* @apply text-black dark:text-black; */
   overflow-wrap: break-word;
 }
 .notion,
